# Mir2

./: .gitignore  AGENTS.md  CMakeLists.txt
.github/workflows/: ci.yml
client/: CMakeLists.txt
client/app/: client_main.cc  game_app.cc  game_app.h
client/controller/: player_controller.cc  player_controller.h  skill_controller.cc  skill_controller.h
client/debug/: dev_panel.h
client/model/: inventory_model.h  model_root.h  player_model.h
client/net/: network_manager.cc  network_manager.h
client/platform/: sdl_runtime.cc  sdl_runtime.h
client/protocol/: client_message.h  protocol_dispatcher.cc  protocol_dispatcher.h
client/scene/: scene.h  scene_manager.h
client/tests/app/: game_app_sdl_test.cc  sdl_runtime_test.cc
client/tests/controller/: player_controller_test.cc
client/tests/model/: inventory_model_test.cc
client/tests/net/: network_queue_test.cc  network_runtime_test.cc
client/tests/protocol/: dispatcher_test.cc
client/tests/scene/: entity_mapping_test.cc
client/ui/: inventory_panel.h  ui_manager.h
client/view/: drop_view.h  entity_view.h  monster_view.h  player_view.h
cmake/: Dependencies.cmake  Warnings.cmake
docs/superpowers/plans/: 2026-03-22-ci-quality-gates-implementation-plan.md  2026-03-22-legend-mmorpg-dual-end-implementation-plan.md  2026-03-22-legend-mmorpg-dual-end-parallel-worktree-plan.md
docs/superpowers/specs/: 2026-03-22-ci-quality-gates-design.md  2026-03-22-legend-mmorpg-dual-end-design.md
scripts/ci/: build_and_test.sh  generate_coverage.sh  run_clang_tidy.sh  run_sanitizers.sh  run_static_checks.sh  test_quality_gates_layout.sh  test_sanitizer_policy.sh
server/: CMakeLists.txt
server/ai/: ai_system.cc  ai_system.h
server/aoi/: aoi_system.cc  aoi_system.h
server/app/: server_app.cc  server_app.h  server_main.cc
server/battle/: battle_system.cc  battle_system.h
server/buff/: buff_system.cc  buff_system.h
server/config/: config_manager.cc  config_manager.h  config_model.h  config_validator.cc  config_validator.h
server/core/log/: logger.cc  logger.h  trace_context.h
server/data/: character_data.cc  character_data.h  inventory.cc  inventory.h
server/db/: player_repository.cc  player_repository.h  player_save_snapshot.h  save_service.cc  save_service.h
server/ecs/: components.h  system_context.h
server/entity/: entity_factory.cc  entity_factory.h
server/gm/: gm_command_handler.cc  gm_command_handler.h
server/net/: network_server.h  session.cc  session.h
server/player/: player.cc  player.h  player_manager.h
server/protocol/: protocol_dispatcher.cc  protocol_dispatcher.h
server/runtime/: server_runtime.cc  server_runtime.h
server/scene/: drop_system.cc  drop_system.h  movement_system.cc  movement_system.h  scene.cc  scene.h  scene_manager.h
server/skill/: skill_system.cc  skill_system.h
server/tests/ai/: monster_ai_test.cc
server/tests/aoi/: aoi_enter_leave_test.cc
server/tests/battle/: damage_resolution_test.cc  skill_cast_test.cc
server/tests/bootstrap/: server_bootstrap_test.cc
server/tests/buff/: buff_expire_test.cc
server/tests/config/: config_validator_test.cc
server/tests/data/: inventory_test.cc  player_repository_test.cc  save_service_test.cc
server/tests/drop/: pickup_idempotency_test.cc  pickup_race_guard_test.cc
server/tests/gm/: gm_command_test.cc
server/tests/integration/: login_enter_move_combat_pickup_test.cc
server/tests/log/: logger_test.cc
server/tests/player/: logout_save_test.cc  player_login_flow_test.cc  reconnect_snapshot_test.cc
server/tests/protocol/: shared_contract_test.cc
server/tests/runtime/: server_runtime_test.cc
server/tests/scene/: enter_scene_snapshot_test.cc  move_correction_test.cc  movement_system_test.cc  scene_spawn_test.cc
shared/: CMakeLists.txt
shared/protocol/: auth_messages.h  combat_messages.h  message_ids.h  runtime_messages.h  scene_messages.h  wire_codec.cc  wire_codec.h
shared/tests/: wire_codec_test.cc
shared/types/: entity_id.h  error_codes.h  player_id.h
tools/proto_dump/: proto_dump_main.cc
tools/replay/: closed_loop_scenario.md
